--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -12,7 +12,8 @@
       <div class="category" onclick="showCategory('category2')">IT</div>
       <div class="category" onclick="showCategory('category3')">PSKV</div>
       <div class="category" onclick="showCategory('category4')">PRG</div>
-      <div class="category" onclick="showCategory('category5')">AJ</div>
+      <div class="category" onclick="showCategory('category5')">PRG</div>
+      <div class="category" onclick="showCategory('category6')">AJ</div>
     </div>
     <div class="category1 files">
 	  <p class="file-literatura-text-main">Analýza Textu</p>
@@ -231,7 +232,7 @@
 	  </div>
 	</div>
 	
-	<div class="category5 files">
+	<div class="category6 files">
 	<p class="file-Maj-text-main">Otázky</p>
 	<p class="file-Maj-text-main-filetype">PDF</p>
       <div class="maturitaMajFileType1">
@@ -297,6 +298,32 @@
 	  <a href="aj/docx/20. Money, methods of payment.docx" class="file-Maj-link">20. Money, methods of payment</a>
 	  </div>
 	</div>
+	
+	<div class="category5 files">
+	<p class="file-mit-text-main">Otázky</p>
+	<p class="file-mit-text-main-filetype">PDF</p>
+      <div class="maturitaMitFileType1">
+	  <a href="mit/pdf/1. ICT v ekonomické praxi.pdf" class="file-mit-link">1. ICT v ekonomické praxi</a> 
+	  <a href="mit/pdf/2. Základní aspekty podnikání.pdf" class="file-mit-link">2. Základní aspekty podnikání</a> 
+	  <a href="mit/pdf/3. Podnikové činnosti - hlavní činnost.pdf" class="file-mit-link">3. Podnikové činnosti - hlavní činnost</a> 
+	  <a href="mit/pdf/4. Zásobování a vztahy s dodavateli.pdf" class="file-mit-link">4. Zásobování a vztahy s dodavateli</a>
+	  <a href="mit/pdf/5. Investiční činnost a pořizování dlouhodobého majetku.pdf" class="file-mit-link">5. Investiční činnost a pořizování dlouhodobého majetku</a>
+	  <a href="mit/pdf/6. Prodejní činnost, vztahy s odběrateli.pdf" class="file-mit-link">6. Prodejní činnost, vztahy s odběrateli</a>
+	  <a href="mit/pdf/7. Financování podniku, finanční řízení.pdf" class="file-mit-link">7. Financování podniku, finanční řízení</a>
+	  <a href="mit/pdf/8. Personalistika.pdf" class="file-mit-link">8. Personalistika</a>
+	  <a href="mit/pdf/9. Marketing.pdf" class="file-mit-link">9. Marketing</a>
+	  <a href="mit/pdf/10. Marketingové nástroje.pdf" class="file-mit-link">10. Marketingové nástroje</a>
+	  <a href="mit/pdf/11. Nákladové a cenové kalkulace.pdf" class="file-mit-link">11. Nákladové a cenové kalkulace</a>
+	  <a href="mit/pdf/12. Management.docx.pdf" class="file-mit-link">12. Management.docx</a>
+	  <a href="mit/pdf/13. Výkazy.pdf" class="file-mit-link">13. Výkazy</a>
+	  <a href="mit/pdf/14. Náklady, výnosy, hospodářský výsledek, bod zvratu.pdf" class="file-mit-link">14. Náklady, výnosy, hospodářský výsledek, bod zvratu</a>
+	  <a href="mit/pdf/15. Komunikace a její formy.pdf" class="file-mit-link">15. Komunikace a její formy</a>
+	  <a href="mit/pdf/16. Principy vedení daňové evidence" class="file-mit-link">16. Principy vedení daňové evidence</a>
+	  <a href="mit/pdf/17. Majetek podniku, odpisování dlouhodobého majetku.pdf" class="file-mit-link">17. Majetek podniku, odpisování dlouhodobého majetku</a>
+	  <a href="mit/pdf/18. Finanční analýza.pdf" class="file-mit-link">18. Finanční analýza</a>
+	  <a href="mit/pdf/19. Dokumentace ve firmě, mzdová dokumentace, mzdy.pdf" class="file-mit-link">19. Dokumentace ve firmě, mzdová dokumentace, mzdy</a>
+	  <a href="mit/pdf/20. Daně, daňová přiznání.pdf" class="file-mit-link">20. Daně, daňová přiznání</a>
+	  </div>
     <script src="../index.js"></script>
   </body>
 </html>
