--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -12,7 +12,7 @@
       <div class="category" onclick="showCategory('category2')">IT</div>
       <div class="category" onclick="showCategory('category3')">PSKV</div>
       <div class="category" onclick="showCategory('category4')">PRG</div>
-      <div class="category" onclick="showCategory('category5')">PRG</div>
+      <div class="category" onclick="showCategory('category5')">MIT</div>
       <div class="category" onclick="showCategory('category6')">AJ</div>
     </div>
     <div class="category1 files">
