--- a/InfisMaturita/infisMaturita.html
+++ b/InfisMaturita/infisMaturita.html
@@ -318,7 +318,7 @@
 	  <a href="mit/pdf/13. Výkazy.pdf" class="file-mit-link">13. Výkazy</a>
 	  <a href="mit/pdf/14. Náklady, výnosy, hospodářský výsledek, bod zvratu.pdf" class="file-mit-link">14. Náklady, výnosy, hospodářský výsledek, bod zvratu</a>
 	  <a href="mit/pdf/15. Komunikace a její formy.pdf" class="file-mit-link">15. Komunikace a její formy</a>
-	  <a href="mit/pdf/16. Principy vedení daňové evidence" class="file-mit-link">16. Principy vedení daňové evidence</a>
+	  <a href="mit/pdf/16. Principy vedení daňové evidence.pdf" class="file-mit-link">16. Principy vedení daňové evidence</a>
 	  <a href="mit/pdf/17. Majetek podniku, odpisování dlouhodobého majetku.pdf" class="file-mit-link">17. Majetek podniku, odpisování dlouhodobého majetku</a>
 	  <a href="mit/pdf/18. Finanční analýza.pdf" class="file-mit-link">18. Finanční analýza</a>
 	  <a href="mit/pdf/19. Dokumentace ve firmě, mzdová dokumentace, mzdy.pdf" class="file-mit-link">19. Dokumentace ve firmě, mzdová dokumentace, mzdy</a>
